--- a/src/css/RegisterPage.css
+++ b/src/css/RegisterPage.css
@@ -4,7 +4,7 @@ body {
   height: 100vh;
   margin: 0;
   text-align: center;
-  background: linear-gradient(to right, #faf1fd, #d6bbdc);
+  background: #faf1fd;
 }
 
 .register-page {
