--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,196 @@
 body {
-  height: 100%;
-  margin: 0; 
+  height: 100vh;
+  margin: 0;
+  font-family: "Rum Raisin", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  text-align: center;
+  background: #faf1fd;
 }
-
 
 .app-container {
   display: flex;
-  flex-direction: column; 
+  flex-direction: column;
   min-height: 100vh;
 }
 
-
 .main-content {
-  flex: 1; 
+  flex: 1;
 }
 
-
 .footer {
-  margin-top: auto; 
-  text-align: center; 
-  padding: 1rem; 
+  margin-top: auto;
+  text-align: center;
+  padding: 1rem;
+}
+
+.buttn-list button {
+  padding: 10px 20px;
+  border-radius: 5px;
+  background-color: #c39acd;
+  color: white;
+  border: none;
+  margin-bottom: 10px;
+  cursor: pointer;
+}
+
+.buttn-list button:hover {
+  background-color: #a27db1; /* Darker shade on hover */
+}
+
+.form-container {
+  display: flex;
+  height: 100vh;
+  justify-content: space-between;
+}
+h1 {
+  font-size: 3rem;
+}
+
+.left-side {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.left-side .background-image {
+  width: 100%;
+  height: 100%;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+  object-fit: cover;
+}
+.right-side {
+  margin: 150px;
+  border-radius: 15px;
+}
+
+.register-container {
+  flex: 1;
+  padding: 40px;
+  margin: auto;
+  background: #fff;
+  border-radius: 15px;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.register-title {
+  margin-bottom: 70px;
+}
+.register-form {
+  width: 900px;
+  max-width: 400px;
+}
+
+.input-wrapper {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+.input-wrapper label {
+  flex: 1;
+}
+
+.input-wrapper input {
+  flex: 2;
+  padding: 10px;
+  border: 2px solid #bc8fc7;
+  border-radius: 10px;
+  outline: none;
+  transition: border-color 0.3s;
+}
+
+.input-wrapper input:focus {
+  border-color: #c9698b;
+}
+
+button {
+  width: 100%;
+  padding: 10px;
+  background-color: #bc8fc7;
+  border: none;
+  border-radius: 10px;
+  color: white;
+  font-size: 1.2rem;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+button:hover {
+  background-color: #c9698b;
+}
+.homepage-container {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.homepage-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
+  transition: filter 0.3s ease; /* Add transition effect */
+}
+
+.homepage-content {
+  text-align: center;
+  color: white;
+  position: relative;
+  z-index: 1;
+}
+
+h1 {
+  letter-spacing: 2px;
+  text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.5);
+  margin-bottom: 20px;
+}
+
+.explore-button {
+  margin-top: 150px;
+  font-size: 3rem;
+  width: 600px;
+  background: #fff;
+  border: none;
+  border-radius: 50px;
+  color: #b790c4;
+  cursor: pointer;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  font-family: "Rum Raisin", sans-serif;
+}
+
+.explore-button:hover {
+  transform: scale(1.1);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+  background: linear-gradient(135deg, #b790c4 0%, #785a80 100%);
+  color: #fff;
+}
+
+.explore-button:active {
+  transform: scale(1);
+}
+
+.explore-button:focus {
+  outline: none;
+}
+
+.explore-button:hover + .homepage-image {
+  filter: blur(5px);
+  transition: filter 0.3s ease;
+}
+.blurred {
+  filter: blur(2px);
+  transition: filter 0.3s ease;
 }
