--- a/src/App.css
+++ b/src/App.css
@@ -326,6 +326,7 @@ h1 {
   margin-right: 10px;
   color: #333;
 }
+
 .newgame-form {
   display: flex;
   flex-direction: column;
@@ -357,30 +358,31 @@ h1 {
   width: 300px;
 }
 
-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px;
-  background-color: #fff;
+.nav {
+  background-color: #ffffff;
+  padding: 1rem;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
-nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-nav a {
-  margin-left: 20px;
-  text-decoration: none;
-}
-
-nav a:hover {
-  color: #ccc;
-}
-
-nav h3 {
+.nav-list {
+  list-style: none;
   margin: 0;
-  font-size: 1.5rem;
+  padding: 0;
+  display: flex;
+  justify-content: space-around;
+}
+
+.nav-link {
+  color: #000000;
+  text-decoration: none;
+  margin-right: 40px;
+}
+
+.nav-link:hover {
+  color: #5b4461;
+}
+
+.nav-icon {
+  margin-right: 10px;
 }
